[package]
name = "umbral"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[dependencies]
blake2 = "0.9"
generic-array = "0.14"
sha3 = "0.9"
hkdf = "0.7"
sha2 = "0.9"
chacha20poly1305 = "0.5"
aead = "0.3"
digest = "0.9"
elliptic-curve = { path = "/Users/bogdan/wb/repos/traits/elliptic-curve" }
ecdsa = { path = "/Users/bogdan/wb/repos/signatures/ecdsa" }

[dependencies.rand_core]
version = "0.5"
features = ["getrandom"]

[dependencies.k256]
features = ["arithmetic", "rand", "digest"]
path = "/Users/bogdan/wb/github/elliptic-curves/k256"

