[package]
name = "umbral"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[dependencies]
blake2 = "0.9"
generic-array = "0.14"
sha3 = "0.9"
hkdf = "0.9"
sha2 = "0.9"
chacha20poly1305 = "0.5"
aead = { version = "0.3", features = ["heapless"] }
digest = "0.9"
elliptic-curve = { version = "= 0.5.0-pre", path = "/Users/bogdan/wb/repos/traits/elliptic-curve" }
ecdsa = { version = "= 0.7.0-pre", path = "/Users/bogdan/wb/repos/signatures/ecdsa" }
signature = { path = "/Users/bogdan/wb/repos/traits/signature", features = ["digest-preview", "rand-preview"] }

[dependencies.rand_core]
version = "0.5"
features = ["getrandom"]

[dependencies.k256]
features = ["arithmetic", "rand", "digest", "ecdsa"]
version = "0.3.0"
path = "/Users/bogdan/wb/github/elliptic-curves/k256"

[dev-dependencies]
heapless = "0.5"
criterion = "0.3"

[features]
std = []

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
