[package]
name = "umbral"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[dependencies]
blake2 = "0.9"
generic-array = "0.14"
sha3 = "0.9"
hkdf = "0.9"
sha2 = "0.9"
chacha20poly1305 = "0.5"
aead = { version = "0.3", features = ["heapless"] }
elliptic-curve = "0.5"
ecdsa = "0.7"
signature = "1.2"
k256 = { version = "0.4", features = ["ecdsa"] }
rand_core = { version = "0.5", features = ["getrandom"] }

[dev-dependencies]
heapless = "0.5"
criterion = "0.3"

[features]
std = []

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
