[package]
name = "umbral-pre-bindings-wasm"
version = "0.3.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Implementation of Umbral proxy reencryption algorithm"
repository = "https://github.com/nucypher/rust-umbral/tree/master/umbral-pre"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
umbral-pre = { path = "../umbral-pre" }

digest = "0.9"
generic-array = "0.14"
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wee_alloc  = "0.4"
zeroize = "1.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
serde_json = "1"
rmp-serde = "0.15"

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
