[package]
name = "umbral-pre-bindings-wasm"
version = "0.3.2"
authors = [
    "Bogdan Opanchuk <bogdan@opanchuk.net>",
    "Piotr Roslaniec <p.roslaniec@gmail.com>",
]
edition = "2018"
license = "GPL-3.0-only"
description = "Implementation of Umbral proxy reencryption algorithm"
repository = "https://github.com/nucypher/rust-umbral/tree/master/umbral-pre-bindings-wasm"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
umbral-pre = { path = "../umbral-pre", features = ["bindings-wasm"] }
wasm-bindgen = "0.2.74"
js-sys = "0.3.51"
wee_alloc = "0.4"
serde = { version = "1.0", features = ["derive"] }
