[package]
name = "umbral-python"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
version = "0.1.0"
edition = "2018"

[lib]
name = "umbral"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.12.3", features = ["extension-module"] }
umbral-pre = { path = "../umbral-pre", features = ["std"] }
generic-array = "0.14"
