[package]
name = "umbral-pre-wasm"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
umbral-pre = { path = "../umbral-pre", features = ["std"] }
generic-array = "0.14"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1" } # TODO: make conditional

[package.metadata.wasm-pack.profile.release]
# See https://github.com/rustwasm/wasm-pack/issues/886
# Maybe at some point in time this won't be necessary.
wasm-opt = ["-Oz", "--enable-mutable-globals"]
