[package]
name = "umbral-pre-wasm"
version = "0.0.3"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Implementation of Umbral proxy reencryption algorithm"
repository = "https://github.com/nucypher/rust-umbral/tree/master/umbral-pre-wasm"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
umbral-pre = { path = "../umbral-pre" }
generic-array = "0.14"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1" } # TODO: make conditional
wee_alloc = "0.4"

[package.metadata.wasm-pack.profile.release]
# See https://github.com/rustwasm/wasm-pack/issues/886
# Maybe at some point in time this won't be necessary.
wasm-opt = ["-Oz", "--enable-mutable-globals"]
