[package]
name = "umbral-pre-wasm"
version = "0.11.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Implementation of Umbral proxy reencryption algorithm"
repository = "https://github.com/nucypher/rust-umbral/tree/master/umbral-pre-wasm"
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
umbral-pre = { path = "../umbral-pre", features = ["bindings-wasm"] }
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
