[package]
name = "umbral"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[dependencies]
digest = "0.9"
blake2 = "0.9"
generic-array = "0.14"
sha3 = "0.9"
hkdf = "0.10"
sha2 = "0.9"
chacha20poly1305 = "0.7"
aead = { version = "0.3", features = ["heapless"] }
elliptic-curve = { version = "0.6", features = ["digest"] }
ecdsa = "0.8"
signature = "1.2"
k256 = { version = "0.5", features = ["ecdsa", "arithmetic", "sha256"] }
rand_core = { version = "0.5", features = ["getrandom"] }
typenum = "1.12"
getrandom = { version = "*", features = ["wasm-bindgen"] }
subtle = "*"

[dev-dependencies]
heapless = "0.5"
criterion = "0.3"

[features]
std = []

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
