[package]
name = "umbral"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[dependencies]
k256 = { version = "0.5", default-features = false, features = ["ecdsa", "arithmetic"] }
blake2 = "0.9"
sha3 = "0.9"
sha2 = "0.9"
chacha20poly1305 = "0.7"

# These packages are among the dependencies of the packages above,
# but we enumerate them here explicitly to set features and use them without a reexport.
hkdf = "*"
elliptic-curve = { version = "*", default-features = false, features = ["digest"] }
digest = "*"
generic-array = "*"
aead = { version = "*", features = ["heapless"] }
ecdsa = "*"
signature = "*"
rand_core = { version = "*", default-features = false, features = ["getrandom"] }
typenum = "*"
getrandom = { version = "*", default-features = false, features = ["wasm-bindgen"] }
subtle = { version = "*", default-features = false }

[dev-dependencies]
heapless = "0.5"
criterion = "0.3"

[features]
std = ["k256/std"]

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
