[package]
name = "umbral"
version = "0.1.0"
authors = ["Bogdan Opanchuk <bogdan@opanchuk.net>"]
edition = "2018"

[dependencies]
k256 = { version = "0.5", default-features = false, features = ["ecdsa", "arithmetic"] }
blake2 = "0.9"
sha3 = "0.9"
sha2 = "0.9"
chacha20poly1305 = "0.7"
hkdf = "0.10"

# These packages are among the dependencies of the packages above.
# Their versions should be updated when the main packages above are updated.
elliptic-curve = { version = "0.6", default-features = false, features = ["digest"] }
digest = "0.9"
generic-array = "0.14"
aead = { version = "0.3", features = ["heapless"] }
ecdsa = "0.8"
signature = "1.2"
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
typenum = "1.12"
getrandom = { version = "0.1", default-features = false, features = ["wasm-bindgen"] }
subtle = { version = "2.3", default-features = false }

[dev-dependencies]
heapless = "0.5"
criterion = "0.3"

[features]
std = ["k256/std"]

[[bench]]
name = "bench"
path = "bench/bench.rs"
harness = false
